[package]
name = "futures-trace"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
license = "MIT"
readme = "README.md"
keywords = ["futures", "async", "future", "logging"]
documentation = "https://docs.rs/futures-trace"
homepage = "https://github.com/hawkw/futures-trace"
repository = "https://github.com/hawkw/futures-trace"
description = """
A simple logging wrapper around `futures-rs` `Future`s and `Stream`s.
"""

[dependencies]
futures = "^0.1.18"
log = "^0.4"
