[package]
name = "futures-log"
version = "0.1.1"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
license = "MIT"
readme = "README.md"
keywords = ["futures", "async", "future", "logging"]
documentation = "https://docs.rs/futures-log"
homepage = "https://github.com/hawkw/futures-log"
repository = "https://github.com/hawkw/futures-log"
description = """
A simple logging wrapper around `futures-rs` `Future`s and `Stream`s.
"""

[dependencies]
futures = "^0.1"
log = "^0.4"
